--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,3 +5,6 @@
 .parent:hover .child{
     color: rgb(196, 197, 255);
 }
+body{
+    background-image: linear-gradient( 174.2deg,  rgb(251, 245, 235) 7.1%, rgb(243, 245, 242) 67.4% );
+}
